--- a/index.html
+++ b/index.html
@@ -3,10 +3,57 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Flex</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<link href="https://fonts.googleapis.com/css2?family=Gluten:wght@100..900&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./assets/css/header.css">
+
 </head>
 <body>
-  
+  <div class="wrapper-header">
+    <header class="header">
+      <a href="" class="logo">Freshcode</a>
+      <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-item"><a href="" class="nav-link">home</a></li>
+          <li class="nav-item"><a href="" class="nav-link">about</a></li>
+          <li class="nav-item"><a href="" class="nav-link">services</a></li>
+          <li class="nav-item"><a href="" class="nav-link">menu</a></li>
+        </ul>
+      </nav>
+      <a href="" class="contact">contact</a>
+     </header>
+  </div>
+  <div class="wrapper">
+ 
+ <main class="main">
+  <!-- section.main-section>h1.main-heading{title page}+article.main-article>h2.article-heading{title article}+img.article-img+p.article-content>lorem100 -->
+
+  <section class="main-section">
+    <h1 class="main-heading">title page</h1>
+    <article class="main-article">
+      <h2 class="article-heading">title article</h2>
+      <img src="./assets/images/account-box (2).svg" alt="" class="article-img">
+      <p class="article-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam adipisci earum quia asperiores at, odit a provident repellendus cupiditate est tempora rerum sit laborum quisquam dolorum delectus maiores. Dignissimos quae accusamus rerum dolor autem? Similique ducimus provident laborum facilis explicabo perspiciatis eligendi nulla voluptatum quod dicta exercitationem aspernatur, quis ipsa beatae deleniti recusandae, esse molestiae quidem consectetur? Quisquam, nulla. Veritatis quaerat, magnam quas culpa nisi voluptatum temporibus cupiditate iusto aliquam sit animi aut eius inventore cumque ullam quidem porro velit ab laboriosam quasi minima repellat quos eum! Itaque natus cum temporibus asperiores esse? Totam temporibus adipisci facere corporis optio eum?</p>
+    </article>
+    
+
+    <article class="main-article">
+      <h2 class="article-heading">title article</h2>
+      <img src="./assets/images/account-box (2).svg" alt="" class="article-img">
+      <p class="article-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam adipisci earum quia asperiores at, odit a provident repellendus cupiditate est tempora rerum sit laborum quisquam dolorum delectus maiores. Dignissimos quae accusamus rerum dolor autem? Similique ducimus provident laborum facilis explicabo perspiciatis eligendi nulla voluptatum quod dicta exercitationem aspernatur, quis ipsa beatae deleniti recusandae, esse molestiae quidem consectetur? Quisquam, nulla. Veritatis quaerat, magnam quas culpa nisi voluptatum temporibus cupiditate iusto aliquam sit animi aut eius inventore cumque ullam quidem porro velit ab laboriosam quasi minima repellat quos eum! Itaque natus cum temporibus asperiores esse? Totam temporibus adipisci facere corporis optio eum?</p>
+    </article>
+  </section>
+
+ </main>
+ <footer class="footer">
+  &COPY;footer
+ </footer>
+</div>
 </body>
 </html>
