--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./assets/css/header.css">
+  <link rel="stylesheet" href="./assets/css/main-section.css">
 
 </head>
 <body>
@@ -33,21 +34,52 @@
  
  <main class="main">
   <!-- section.main-section>h1.main-heading{title page}+article.main-article>h2.article-heading{title article}+img.article-img+p.article-content>lorem100 -->
-
+  <h1 class="main-heading">title page</h1>
   <section class="main-section">
-    <h1 class="main-heading">title page</h1>
+    
     <article class="main-article">
       <h2 class="article-heading">title article</h2>
       <img src="./assets/images/account-box (2).svg" alt="" class="article-img">
-      <p class="article-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam adipisci earum quia asperiores at, odit a provident repellendus cupiditate est tempora rerum sit laborum quisquam dolorum delectus maiores. Dignissimos quae accusamus rerum dolor autem? Similique ducimus provident laborum facilis explicabo perspiciatis eligendi nulla voluptatum quod dicta exercitationem aspernatur, quis ipsa beatae deleniti recusandae, esse molestiae quidem consectetur? Quisquam, nulla. Veritatis quaerat, magnam quas culpa nisi voluptatum temporibus cupiditate iusto aliquam sit animi aut eius inventore cumque ullam quidem porro velit ab laboriosam quasi minima repellat quos eum! Itaque natus cum temporibus asperiores esse? Totam temporibus adipisci facere corporis optio eum?</p>
+      <p class="article-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam adipisci earum quia asperiores at, odit a provident repellendus cupiditate est tempora rerum sit laborum quisquam dolorum delectus maiores. Dignissimos quae accusamus rerum dolor autem? Similique ducimus provident laborum facilis explicabo perspiciatis eligendi nulla voluptatum quod dicta exercitationem aspernatur, quis ipsa beatae deleniti recusandae, esse molestiae quidem consectetur? Quisquam, nulla. Veritatis </p>
     </article>
     
 
     <article class="main-article">
       <h2 class="article-heading">title article</h2>
       <img src="./assets/images/account-box (2).svg" alt="" class="article-img">
-      <p class="article-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam adipisci earum quia asperiores at, odit a provident repellendus cupiditate est tempora rerum sit laborum quisquam dolorum delectus maiores. Dignissimos quae accusamus rerum dolor autem? Similique ducimus provident laborum facilis explicabo perspiciatis eligendi nulla voluptatum quod dicta exercitationem aspernatur, quis ipsa beatae deleniti recusandae, esse molestiae quidem consectetur? Quisquam, nulla. Veritatis quaerat, magnam quas culpa nisi voluptatum temporibus cupiditate iusto aliquam sit animi aut eius inventore cumque ullam quidem porro velit ab laboriosam quasi minima repellat quos eum! Itaque natus cum temporibus asperiores esse? Totam temporibus adipisci facere corporis optio eum?</p>
+      <p class="article-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam adipisci earum quia asperiores at, odit a provident repellendus cupiditate est </p>
     </article>
+
+    <article class="main-article">
+      <h2 class="article-heading">title article</h2>
+      <img src="./assets/images/account-box (2).svg" alt="" class="article-img">
+      <p class="article-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam adipisci earum quia asperiores at, odit a provident repellendus cupiditate est tempora rerum sit laborum quisquam dolorum delectus maiores. Dignissimos quae accusamus rerum dolor autem? Similique ducimus provident laborum facilis explicabo perspiciatis eligendi nulla voluptatum quod dicta exercitationem aspernatur, quis ipsa beatae deleniti recusandae, esse molestiae quidem consectetur? Quisquam, nulla. Veritatis quaerat, magnam quas culpa nisi voluptatum t</p>
+    </article>
+
+    <article class="main-article">
+      <h2 class="article-heading">title article</h2>
+      <img src="./assets/images/account-box (2).svg" alt="" class="article-img">
+      <p class="article-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam adipisci earum quia asperiores at, odit a provident repellendus cupiditate est tempora rerum sit laborum quisquam dolorum delectus maiores. Dignissimos quae accusamus rerum dolor autem? Similique ducimus provident laborum facilis explicabo perspiciatis eligendi nulla voluptatum quod dicta exercitationem aspernatur, quis ipsa beatae deleniti recusandae, esse molestiae quidem consectetur? Quisquam, nulla. Veritatis quaerat, magnam quas culpa nisi </p>
+    </article>
+
+    <article class="main-article">
+      <h2 class="article-heading">title article</h2>
+      <img src="./assets/images/account-box (2).svg" alt="" class="article-img">
+      <p class="article-content">Lorem ipsum dolor sit amet consectetur,</p>
+    </article>
+
+    <article class="main-article">
+      <h2 class="article-heading">title article</h2>
+      <img src="./assets/images/account-box (2).svg" alt="" class="article-img">
+      <p class="article-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam adipisci earum quia asperiores at, odit a provident repellendus cupiditate e</p>
+    </article>
+
+    <article class="main-article">
+      <h2 class="article-heading">title article</h2>
+      <img src="./assets/images/account-box (2).svg" alt="" class="article-img">
+      <p class="article-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam adipisci earum quia asperiores at, odit a provident repellendus cupiditate est tempora rerum sit laborum quisquam dolorum delectus maiores. Dignissimos quae accusamus rerum dolor autem? Similique ducimus provident laborum facilis explicabo perspiciatis eligendi nulla voluptatum quod dicta exercitationem aspernatur, quis ipsa beatae deleniti recusandae, esse molestiae quidem consectetur? Quisquam, nulla. Veritatis </p>
+    </article>
+
   </section>
 
  </main>
